Update All Plots

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -161,12 +161,12 @@
 \begin{IEEEkeywords}
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
-% \tikzsetnextfilename{Exp0_serialize_benchmark}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp0_deserialize_benchmark}
-%         \caption{Benchmark-De/Serialize}
-% \end{figure*}
+\tikzsetnextfilename{Exp0_serialize_benchmark}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp0_deserialize_benchmark}
+        \caption{Benchmark-De/Serialize}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp0_metadata}
 %     \begin{figure*}[h]
@@ -281,12 +281,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 % \end{figure*}
 
 
-\tikzsetnextfilename{Exp4_externalsort}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp4_externalsort}
-        \caption{Experiment4: (Externalsort)}
-\end{figure*}
+% \tikzsetnextfilename{Exp4_externalsort}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp4_externalsort}
+%         \caption{Experiment4: (Externalsort)}
+% \end{figure*}
 
 
 \maketitle
