--- a/Experiments/plot/figures/Exp0_serialize_benchmark.tex
+++ b/Experiments/plot/figures/Exp0_serialize_benchmark.tex
@@ -9,6 +9,7 @@
         \myaddplot{ProtoBuf}{serialization_time}{*}{color1};        
         \myaddplot{FlatBuf}{serialization_time}{square*}{color2};
         \myaddplot{Boost}{serialization_time}{square*}{color3};
+        \myaddplot{BoostBinary}{serialization_time}{diamond*}{color7};
         \myaddplot{Hand-coded}{serialization_time}{triangle}{color6};
         \myaddplot{inPlace}{serialization_time}{triangle*}{color5};
 
