--- a/Experiments/plot/figures/Exp2_legend_parallel.tex
+++ b/Experiments/plot/figures/Exp2_legend_parallel.tex
@@ -21,7 +21,9 @@
     \addlegendimage{black,mark=triangle*,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{C++ ProtoBuf};
     \addlegendimage{black,mark=square,dotted, line cap=round,mark options={scale=1.2,solid}}
-    \addlegendentry{C++ Boost};
+    \addlegendentry{C++ BoostText};
+    \addlegendimage{black,mark=diamond*,dotted, line cap=round,mark options={scale=1.2,solid}}
+    \addlegendentry{C++ BoostBinary};
     \addlegendimage{black,mark=square*,dotted, line cap=round,mark options={scale=1.2,solid}}
     \addlegendentry{C++ Bson};
 
