--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,21 +273,25 @@
     "    root_path = '../archive/results'    \n",
     "\n",
     "    write_results = [f'{root_path}/Java_Experiment1_Write_times.dat',\n",
-    "                     f'{root_path}/CPP_Experiment1_Write_times.dat']\n",
+    "                     f'{root_path}/CPP_Experiment1_Write_times.dat',\n",
+    "                     f'{root_path}/Rust_Experiment1_Write_times.dat']\n",
     "\n",
     "    read_results = [f'{root_path}/Java_Experiment2_Read_times.dat',\n",
-    "                    f'{root_path}/CPP_Experiment2_Read_times.dat']\n",
+    "                    f'{root_path}/CPP_Experiment2_Read_times.dat',\n",
+    "                    f'{root_path}/Rust_Experiment2_Read_times.dat']\n",
     "\n",
     "    load_to_memory_results = [f'{root_path}/Java_Experiment1_LoadToMemory_times.dat',\n",
-    "                              f'{root_path}/CPP_Experiment1_LoadToMemory_times.dat']\n",
+    "                              f'{root_path}/CPP_Experiment1_LoadToMemory_times.dat',\n",
+    "                              f'{root_path}/Rust_Experiment1_LoadToMemory_times.dat']\n",
     "\n",
     "    network_results = [f'{root_path}/CPP_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Java_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Rust_Experiment4_Network_ExternalSort_times.dat'] \n",
     "                       \n",
-    "    externalsort_results = [f'{root_path}/CPP_Experiment3b_ExternalSort_times.dat',\n",
-    "                            f'{root_path}/Java_Experiment3b_ExternalSort_times.dat',\n",
-    "                            f'{root_path}/Rust_Experiment3b_ExternalSort_times.dat']                   \n",
+    "    # externalsort_results = [f'{root_path}/CPP_Experiment3b_ExternalSort_times.dat',\n",
+    "    #                         f'{root_path}/Java_Experiment3b_ExternalSort_times.dat',\n",
+    "    #                         f'{root_path}/Rust_Experiment3b_ExternalSort_times.dat']    \n",
+    "    externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
     "   \n",
     "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
     "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
@@ -333,17 +337,17 @@
     "\n",
     "    # df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
-    "    # df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
+    "    df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
     "        \n",
     "               \n",
-    "    df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
-    "    df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
-    "    df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
-    "    df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
-    "    df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
-    "    df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
+    "    # df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
+    "    # df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
+    "    # df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
+    "    # df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
+    "    # df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
+    "    # df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
     "    # df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
-    "    # df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
+    "    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
     "\n",
     "\n",
@@ -352,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
