--- a/Experiments/plot/figures/Exp1_write_parallel.tex
+++ b/Experiments/plot/figures/Exp1_write_parallel.tex
@@ -3,9 +3,9 @@
 	\makeatletter
 	\pgfplots@stacked@isfirstplottrue
 	\makeatother
-	\addplot [forget plot,draw=none] coordinates{({HandcodedCPP},0.01) ({inPlaceCPP},0.01) ({FlatBufCPP},0.01) ({ProtoBufCPP},0.01) 
-	({BoostCPP},0.01) ({BsonCPP},0.01) ({MessagePackRust},0.01) ({BincodeRust},0.01) ({JsonRust},0.01) ({FlexBufRust},0.01) ({BsonRust},0.01) ({Json+GzipJava},0.01) 
-	({JsonJava},0.01) ({BsonJava},0.01) ({DefaultJava},0.01) ({ProtoBufJava},0.01) ({ByteBufferJava},0.01) ({FlatBufJava},0.01) ({KryoJava},0.01)};
+	\addplot [forget plot,draw=none] coordinates{({HandcodedCPP},0.1) ({inPlaceCPP},0.1) ({ProtoBufCPP},0.1) ({FlatBufCPP},0.1)  ({BoostBinaryCPP},0.1) ({BoostCPP},0.1)  ({BsonCPP},0.1) 
+	({MessagePackRust},0.1) ({BincodeRust},0.1)  ({JsonRust},0.1) ({FlexBufRust},0.1) ({BsonRust},0.1) 
+	({ByteBufferJava},0.1) ({KryoJava},0.1) ({ProtoBufJava},0.1) ({FlatBufJava},0.1) ({DefaultJava},0.1) ({BsonJava},0.1)  ({JsonJava},0.1) ({Json+GzipJava},0.1)};
 }
 \makeatother
 
@@ -154,8 +154,8 @@
 		x label style={yshift=-20pt},
 		xtick=data,
 		height=0.55\columnwidth,  
-		symbolic x coords={ HandcodedCPP, inPlaceCPP, FlatBufCPP, ProtoBufCPP, BoostCPP, BsonCPP, MessagePackRust, BincodeRust, JsonRust, FlexBufRust, BsonRust, Json+GzipJava, JsonJava, BsonJava, DefaultJava, ProtoBufJava, ByteBufferJava, FlatBufJava, KryoJava},		   
-		xticklabels={Handcoded, inPlace, FlatBuf, ProtoBuf, Boost, Bson, MessagePack, Bincode, Json, FlexBuf, Bson, Json+Gzip, Json, Bson, Default, ProtoBuf, ByteBuffer, FlatBuf, Kryo},  		   
+		symbolic x coords={ HandcodedCPP, inPlaceCPP, ProtoBufCPP, FlatBufCPP, BoostBinaryCPP, BoostCPP, BsonCPP, MessagePackRust,BincodeRust, JsonRust, FlexBufRust, BsonRust,ByteBufferJava,KryoJava,ProtoBufJava,FlatBufJava,DefaultJava,BsonJava,JsonJava, Json+GzipJava},		   
+		xticklabels={HandCoded, InPlace, ProtoBuf, FlatBuf, BoostBinary, BoostText, Bson, MessagePack,Bincode, Json, FlexBuf, Bson,ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,Bson,Json, Json+Gzip},  		   
 		point meta=rawy,            
 		nodes near coords={%
     		\pgfmathprintnumberto[fixed,assume math mode=true,precision=1]{\pgfplotspointmeta}{\myval}%
@@ -165,19 +165,19 @@
 		legend image code/.code={\draw [#1] (0cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{black}{white}{0.23\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
+\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
 \addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{}{{enlarge x limits=0.18,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
 
-\addDiagramExpOne{Java}{black}{color7}{0.28\textwidth}{}{}{{enlarge x limits=0.10,}};
+\addDiagramExpOne{Java}{black}{color7}{0.29\textwidth}{}{}{{enlarge x limits=0.10,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
 
 
 \end{groupplot}
 
-\node [draw=none,inner sep=0, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.0cm,0.3cm)$) {\shortstack[l]{
+\node [draw=lightgray,inner sep=0.5mm, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.0cm,0.3cm)$) {\shortstack[l]{
 		\ref{CPUJava} CPU \ \ \  
 		\ref{IOJava} I/O
 }};
