--- a/Experiments/plot/figures/Exp4_externalsort.tex
+++ b/Experiments/plot/figures/Exp4_externalsort.tex
@@ -148,7 +148,7 @@
 		ymax=270,
 		scaled y ticks=false,		  
 		enlarge y limits={0.5,upper},		
-		ylabel={Execution Time[min.]},		   
+		ylabel={Execution Time[min]},		   
 		ytick align=inside,
 		xtick align=outside,	
 		ytick={10,100,1000},
