Add Missed BoostBinar results in Local External Sort

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -175,12 +175,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Benchmark-Deserialize}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp1_write_single}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp1_write_single}
-%         \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp1_write_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp1_write_single}
+        \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_parallel}
 %     \begin{figure*}[h]
