--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -11,26 +11,17 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2021.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: numpy in /home/saeed/.local/lib/python3.10/site-packages (1.23.4)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: scipy in /home/saeed/.local/lib/python3.10/site-packages (1.9.2)\n",
       "Requirement already satisfied: numpy<1.26.0,>=1.18.5 in /home/saeed/.local/lib/python3.10/site-packages (from scipy) (1.23.4)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,10 +279,10 @@
     "                       f'{root_path}/Java_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Rust_Experiment4_Network_ExternalSort_times.dat'] \n",
     "                       \n",
-    "    # externalsort_results = [f'{root_path}/CPP_Experiment3b_ExternalSort_times.dat',\n",
-    "    #                         f'{root_path}/Java_Experiment3b_ExternalSort_times.dat',\n",
-    "    #                         f'{root_path}/Rust_Experiment3b_ExternalSort_times.dat']    \n",
-    "    externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
+    "    externalsort_results = [f'{root_path}/CPP_Experiment3b_ExternalSort_times.dat',\n",
+    "                            f'{root_path}/Java_Experiment3b_ExternalSort_times.dat',\n",
+    "                            f'{root_path}/Rust_Experiment3b_ExternalSort_times.dat']    \n",
+    "    #externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
     "   \n",
     "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
     "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
@@ -318,20 +309,20 @@
     "    df_network = merge_results(network_results)   \n",
     "    df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
-    "    df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "                                       seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
+    "    # df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "    #                                    seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
     "\n",
-    "    df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
+    "    # df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
     "\n",
     "\n",
-    "    df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "                                       seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
+    "    # df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "    #                                    seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
     "\n",
-    "    df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"], seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "    # df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"], seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
     "\n",
-    "    df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "    # df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
     "\n",
-    "    df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"], seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
+    "    # df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"], seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
     "\n",
     "                         \n",
     "\n",
@@ -347,7 +338,8 @@
     "    # df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
     "    # df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
     "    # df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
-    "    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
+    "    df_externalsort_final.to_csv(\"/home/saeed/Documents/Exp4_externalsort.dat\", index=False)  \n",
+    "    print(df_externalsort_final)          \n",
     "  \n",
     "\n",
     "\n",
@@ -356,9 +348,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        baseline language  taskset execution  chunk_size      nrow   time\n",
+      "0    DefaultJava     Java     True     Total     1000000  15000000  71.37\n",
+      "1    DefaultJava     Java     True       CPU     1000000  15000000  64.37\n",
+      "2    DefaultJava     Java     True        IO     1000000  15000000   7.00\n",
+      "3    DefaultJava     Java    False     Total     1000000  15000000  72.52\n",
+      "4    DefaultJava     Java    False       CPU     1000000  15000000  66.05\n",
+      "..           ...      ...      ...       ...         ...       ...    ...\n",
+      "115  FlexBufRust     Rust     True       CPU     1000000  15000000  11.68\n",
+      "116  FlexBufRust     Rust     True        IO     1000000  15000000   5.44\n",
+      "117  FlexBufRust     Rust    False     Total     1000000  15000000  17.13\n",
+      "118  FlexBufRust     Rust    False       CPU     1000000  15000000  11.68\n",
+      "119  FlexBufRust     Rust    False        IO     1000000  15000000   5.45\n",
+      "\n",
+      "[120 rows x 7 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "results()"
    ]
