--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -161,12 +161,12 @@
 \begin{IEEEkeywords}
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
-\tikzsetnextfilename{Exp0_serialize_benchmark}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp0_deserialize_benchmark}
-        \caption{Benchmark-De/Serialize}
-\end{figure*}
+% \tikzsetnextfilename{Exp0_serialize_benchmark}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp0_deserialize_benchmark}
+%         \caption{Benchmark-De/Serialize}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp0_metadata}
 %     \begin{figure*}[h]
@@ -196,12 +196,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Single)}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp2_rand_read_single}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_rand_read_single}
-%         \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_rand_read_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_single}
+        \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp2_seq_read_parallel}
 %     \begin{figure*}[h]
