Add CPP memory results, memory plot

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -196,12 +196,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Single)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_single}
-        \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_single}
+%         \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp2_seq_read_parallel}
 %     \begin{figure*}[h]
@@ -287,6 +287,13 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \input{figures/Exp4_externalsort}
 %         \caption{Experiment4: (Externalsort)}
 % \end{figure*}
+
+\tikzsetnextfilename{Exp6_read_memory}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp6_read_memory}
+        \caption{Experiment6: (Read Memory)}
+\end{figure*}
 
 
 \maketitle
