--- a/Experiments/plot/memory_results.ipynb
+++ b/Experiments/plot/memory_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2021.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2021.3)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "    # baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
     "    #             \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
     "    #             \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
-    "    baselines = [\"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\"]    \n",
+    "    baselines = [\"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\"]    \n",
     "\n",
     "\n",
     "    results = []\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
