Final Memory Results

--- a/Experiments/plot/figures/Exp6_read_memory.tex
+++ b/Experiments/plot/figures/Exp6_read_memory.tex
@@ -7,7 +7,7 @@
 	\makeatother
 	\addplot [forget plot,draw=none] coordinates{({inPlaceCPP},0.1) ({FlatBufCPP},0.1) ({HandcodedCPP},0.1) ({BoostBinaryCPP},0.1)  ({BoostCPP},0.1) ({ProtoBufCPP},0.1)  ({BsonCPP},0.1) 
 	({BincodeRust},0.1) ({FlexBufRust},0.1)  ({MessagePackRust},0.1) ({BsonRust},0.1) ({JsonRust},0.1) 
-	({ByteBufferJava},0.1) ({KryoJava},0.1) ({ProtoBufJava},0.1) ({FlatBufJava},0.1) ({DefaultJava},0.1) ({BsonJava},0.1)  ({JsonJava},0.1) ({Json+GzipJava},-0.1)};
+	({FlatBufJava},0.1) ({ProtoBufJava},0.1) ({KryoJava},0.1) ({DefaultJava},0.1) ({JsonJava},0.1) ({Json+GzipJava},0.1)  ({BsonJava},0.1) ({ByteBufferJava},-0.1)};
 }
 \makeatother
 
@@ -94,8 +94,8 @@
 		y tick label style={/pgf/number format/1000 sep={}},
 		ymax=128,		
 		scaled y ticks=false,		  
-		enlarge y limits={0.13,upper},		
-		ylabel={Memory Used[GB]},		   
+		enlarge y limits={0.4,upper},		
+		ylabel={Memory Used [GB]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
@@ -108,8 +108,9 @@
 		height=0.55\columnwidth,  
 		symbolic x coords={inPlaceCPP,FlatBufCPP, HandcodedCPP,BoostBinaryCPP, BoostCPP, ProtoBufCPP, BsonCPP, 
 		BincodeRust,FlexBufRust, MessagePackRust,BsonRust, JsonRust, 
-		ByteBufferJava,KryoJava,ProtoBufJava,FlatBufJava,DefaultJava,BsonJava,JsonJava, Json+GzipJava},		   
-		xticklabels={InPlace,FlatBuf,HandCoded,BoostBinary,BoostText,ProtoBuf,Bson, Bincode, FlexBuf,MessagePack,Bson, Json, ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,Bson,Json, Json+Gzip},		
+		FlatBufJava,ProtoBufJava,KryoJava,DefaultJava,JsonJava, Json+GzipJava,BsonJava,ByteBufferJava},		   
+		xticklabels={InPlace,FlatBuf,HandCoded,BoostBinary,BoostText,ProtoBuf,Bson, Bincode, FlexBuf,MessagePack,Bson, Json, 
+		FlatBuf,ProtoBuf,Kryo,Default,Json,Json+Gzip,Bson,ByteBuffer},		
 		point meta=rawy,            
 		nodes near coords={%
     		\pgfmathprintnumberto[fixed,assume math mode=true,precision=1]{\pgfplotspointmeta}{\myval}%
