--- a/Experiments/plot/memory_results.ipynb
+++ b/Experiments/plot/memory_results.ipynb
@@ -62,12 +62,9 @@
     "def results():\n",
     "    root_path = '../archive/memory/Experiment4_Memory_'    \n",
     "\n",
-    "    # baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
-    "    #             \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
-    "    #             \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
-    "    baselines = [\"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
-    "                 \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
-    "\n",
+    "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
+    "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
+    "                \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]        \n",
     "\n",
     "    results = []\n",
     "\n",
