Add BSON re-run results

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -175,12 +175,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Benchmark-Deserialize}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp1_write_single}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp1_write_single}
-%         \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
-% \end{figure*}
+\tikzsetnextfilename{Exp1_write_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp1_write_single}
+        \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_parallel}
 %     \begin{figure*}[h]
@@ -288,12 +288,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment4: (Externalsort)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp6_read_memory}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp6_read_memory}
-        \caption{Experiment6: (Read Memory)}
-\end{figure*}
+% \tikzsetnextfilename{Exp6_read_memory}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp6_read_memory}
+%         \caption{Experiment6: (Read Memory)}
+% \end{figure*}
 
 
 \maketitle
